<resources>
    <string name="app_name">JianBao</string>
    <string name="name">姓名</string>
    <string name="inname">请输入真实姓名</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="password">密码</string>
    <string name="inpassword">请输入你的密码</string>
    <string name="info">请输入手机号码</string>
    <string name="photo">请上传手持身份证照片</string>
    <string name="code">邀请码</string>
    <string name="incode">请输入邀请码</string>
    <string name="register">立即注册</string>
    <string name="login">立即登录</string>
    <string name="noid">没有账号？立即注册</string>

    <string name="app_name1">SharePhoto</string>

    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo1">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
</resources>
