<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/goomba" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:hint="@string/inname"
                android:textSize="16sp"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/ed_border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/gender"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/male" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/female" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ed_border"
                android:hint="@string/inpassword"
                android:textSize="16sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ed_border"
                android:hint="@string/info"
                android:textSize="16sp"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/ed_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ed_border"
                android:hint="@string/incode"
                android:textSize="16sp"
                android:gravity="center" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/photo"
                android:gravity="center"/>

            <ImageButton
                android:id="@+id/ibtn_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@mipmap/camera_th" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border"
            android:text="@string/register"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>