<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/goomba_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_id"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ed_border"
            android:gravity="center"
            android:hint="@string/info" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ed_border"
            android:gravity="center"
            android:hint="@string/inpassword"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center">

        <CheckBox
            android:id="@+id/box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="记住密码"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border"
            android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_noid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/noid"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_look"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/look"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>